--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -39,17 +39,6 @@
 			<ul>
 				<li>eeclass 連結：<a href="https://eeclass.nthu.edu.tw/course/29509">https://eeclass.nthu.edu.tw/course/29509</a></li>
 				<li>進度細節會視情況調整，課後練習及作業未於課堂正式宣布前皆為暫定。</li>
-				<li>加簽處理與優先參考原則（公告至加退選教師簽核結束）
-					<ol>
-						<li value="0">下列之「及時」，皆指 09/06 08:00 前；「必修」指必修本課程，且無法以過往學分抵免者；提出證明之管道，為修課問卷或 email；「優先核准」若遇並列時，由教師主觀判斷選擇</li>
-						<li>未於第一週上課當日 08:00 前申請者，視為非必修生</li>
-						<li>於第一週上課當日 08:00 前提出適當證明之必修生優先核准</li>
-						<li>餘下者於名額有剩餘時，大四以上優先核准（交換生須及時主動提出原校年級證明）</li>
-						<li>再餘下者於名額有剩餘時，R6 與 Ra 之空堂數多者優先核准</li>
-						<li>再餘下者於名額有剩餘時，依教師主觀判斷之課後練習 01 表現高低核准</li>
-						<li>未及時填畢修課問卷，或未嚴格依照說明填答者，將影響加簽與否或成績計算。</li>
-					</ol>
-				</li>
 			</ul>
 		</td>
 	</tr>
@@ -89,17 +78,17 @@
 	<tr>
 		<td class="tdLeft">W03: 09/18</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；LeetCode 注意事項整理；串列</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；串列（基本介紹）；LeetCode 注意事項整理</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 03
+			<a href="pr03.htm">課後練習 03</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W04: 09/25</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列；字典；迴圈</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列（基本介紹、排序、容易出問題的寫法）；字典（基本介紹）</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
