--- a/25f_math/pr03.htm
+++ b/25f_math/pr03.htm
@@ -13,7 +13,7 @@
 <ul>
 	<li>(42%)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/alice-and-bob-playing-flower-game">3021. Alice and Bob Playing Flower Game</a></li>
 	<li>(42%)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/find-closest-person">3516. Find Closest Person</a></li>
-	<li>(16%)請以你的學號末五碼的每一碼為 a 串列的每個元素（例：學號為 9962816 時，則 a = [6, 2, 8, 1, 6]），回答當下列指令分別執行時，會產生的結果
+	<li>(16%)請以你的學號末五碼的每一碼依序為 a 串列的每個元素（例：學號為 9962816 時，則 a = [6, 2, 8, 1, 6]），回答當下列指令各自分別執行時，會產生的結果
 		<ol>
 			<li>print(a[0])</li>
 			<li>print(a[4])</li>
@@ -21,8 +21,8 @@
 			<li>print(a[-1])</li>
 			<li>print(a[-5])</li>
 			<li>print(a[2:])</li>
+			<li>print(a[-2:])</li>
 			<li>print(7 in a)</li>
-			<li>print(sum(a[-2:]))</li>
 		</ol>
 	</li>
 </ul>
