--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -88,11 +88,11 @@
 	<tr>
 		<td class="tdLeft">W04: 09/25</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列（基本介紹、排序、容易出問題的寫法）；字典（基本介紹）</a><br>
+			線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">串列（基本介紹、排序、容易出問題的寫法）；字典（基本介紹）</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
-			課後練習 04
+			<a href="pr04.htm">課後練習 04</a>
 		</td>
 	</tr>
 
