--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -102,7 +102,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 05<br>
+			<a href="pr05.htm">課後練習 05</a><br>
 			期中作業一
 		</td>
 	</tr>
