Add pr05 and hwmt1

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -103,7 +103,7 @@
 		</td>
 		<td class="tdRight">
 			<a href="pr05.htm">課後練習 05</a><br>
-			期中作業一
+			<a href="hwmt1.htm">期中作業一</a>
 		</td>
 	</tr>
 
