--- a/25f_math/pr05.htm
+++ b/25f_math/pr05.htm
@@ -26,7 +26,7 @@
 
 <ul>
 	<li>本練習第一題須於當週 demo，排隊請使用<a href="https://forms.gle/kei24D5kBoLvkWVv5">此連結</a>。</li>
-	<li>本練習第二與第三題請於時限內至 eeclass 專區「課後練習 05 Q2 Q3 繳交區」，以「在文字輸入框填入文字」的方式繳交。若教師或助教認為需要請你來 demo 時，將暫時不評予相關題目之成績，並會另外通知。</li>
+	<li>本練習第二與第三題請於時限內至 eeclass 專區「課後練習 05 Q2 Q3 繳交區」，以「在文字輸入框填入文字」的方式繳交，並請皆僅繳交函式本體。此外，若教師或助教認為需要請你來 demo 時，將暫時不評予相關題目之成績，並會另外通知。</li>
 	<li>第三題對應的算式是來自<a href="https://leetcode.com/problems/domino-and-tromino-tiling/description/comments/1726877/">這裡</a>，若你完成該題後有餘力，可以自行嘗試對應的 LeetCode 題目。</li>
 </ul>
 
