--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -99,7 +99,7 @@
 	<tr>
 		<td class="tdLeft">W05: 10/02</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（基本介紹）</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr05.htm">課後練習 05</a><br>
@@ -110,10 +110,11 @@
 	<tr>
 		<td class="tdLeft">W06: 10/09</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter</a>
+			線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）</a>
 		</td>
 		<td class="tdRight">
-			課後練習 06<br>
+			<a href="pr06.htm">課後練習 06</a><br>
 		</td>
 	</tr>
 
