update pr and mt

--- a/25f_math/hwmt1-2.htm
+++ b/25f_math/hwmt1-2.htm
@@ -55,6 +55,7 @@ True
 			<li>n 不超過 1001。</li>
 			<li>你必須用相同程式碼，同時通過「正確性評分用測資」和「Speed Bonus 評分用測資」的正確性檢驗，才能取得本 bonus 分數。</li>
 			<li>依班級整體排名狀況，來決定給分數字。</li>
+			<li>有機會取得滿分的方法提示：prefix sum。</li>
 		</ul>
 	</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方，否則若影響自動批改時，可能會有折扣：
