--- a/25f_math/hwmt1.htm
+++ b/25f_math/hwmt1.htm
@@ -12,8 +12,13 @@
 <p style="background-color:#f99;font-size:17pt">作業資訊</p>
 <ul>
 	<li>Deadline: 10/13 08:00</li>
-	<li>繳交方式: eeclass 作業上傳區，檔名規定詳如各題說明</li>
-	<li>Demo 時間地點: 10/16 原上課時段於原教室，另視情況使用課前與課後時段</li>
+	<li>繳交方式: eeclass 作業上傳區，以附件方式繳交，並請不要壓縮，檔名規定詳如各題說明</li>
+	<li>Demo 時間地點: 10/16 原上課時段於原教室，另視情況使用 R6 與 Ra 時段
+		<ul>
+			<li>被安排到 R6 或 Ra 者，將盡可能於作業截止後 48 小時內通知，<b>各位有義務密切注意信箱</b>。</li>
+			<li>欲自行報名於 R6 或 Ra 進行 demo 者，請盡可能於作業截止當日 22:00 前寄信告知教師。</li>
+		</ul>
+	</li>
 	<li>Speed Bonus: 5 分，依程式執行時間長短之排名給分</li>
 	<li>Pylint Bonus: 5 分，依工具評定之程式碼風格分數給分</li>
 	<li>評分方式: 各題滿分皆為 100，本作業總分為各題正確性平均 + Pylint Bonus + Speed Bonus，並視 demo 狀況決定是否酌予折扣</li>
