--- a/25f_math/hwmt1.htm
+++ b/25f_math/hwmt1.htm
@@ -33,7 +33,7 @@
 		<ul>
 			<li>檔名必須為「q3_你的學號.py」，例如 q3_9962816.py。</li>
 			<li>語言建議選 Python3，Class 及 function 名稱應依 LeetCode 規定。</li>
-			<li>繳交時應包含 class 整體，且若選 Python3 時<b>請移除 type hints</b>（或以教材提過的其他方式來消除其影響）。你也可以自行撰寫額外的函式，但除了 class 與這些函式之外，其餘程式碼都應包含在「if name == 'main':」中，否則可能會有折扣。</li>
+			<li>繳交時應包含 class 整體，且若選 Python3 時<b>請移除 type hints</b>（或以教材提過的其他方式來消除其影響）。你也可以自行撰寫額外的函式，但除了 class 與這些函式之外，其餘程式碼都應包含在「if __name__ == '__main__':」中，否則可能會有折扣。</li>
 			<li>本課程評分用測資僅一組，內容符合 LeetCode 之規定。</li>
 			<li>提示：善用 set，就可以不必自己寫迴圈。</li>
 		</ul>
@@ -42,7 +42,7 @@
 		<ul>
 			<li>檔名必須為「q4_你的學號.py」，例如 q4_9962816.py。</li>
 			<li>語言建議選 Python3，Class 及 function 名稱應依 LeetCode 規定。</li>
-			<li>繳交時應包含 class 整體。你也可以自行撰寫額外的函式，但除了 class 與這些函式之外，其餘程式碼都應包含在「if name == 'main':」中，否則可能會有折扣。</li>
+			<li>繳交時應包含 class 整體。你也可以自行撰寫額外的函式，但除了 class 與這些函式之外，其餘程式碼都應包含在「if __name__ == '__main__':」中，否則可能會有折扣。</li>
 			<li>本課程評分用測資僅一組，內容符合 LeetCode 之規定。</li>
 		</ul>
 	</li>
