--- a/25f_math/hwmt1.htm
+++ b/25f_math/hwmt1.htm
@@ -50,7 +50,7 @@
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
-	<li>每題給分最小單位為一組測資，一組測資包含多筆（一筆為一個輸入&輸出的配對），每組的所有測資全對，才會拿到該組測資的分數。</li>
+	<li>每題給分最小單位為一組測資，一組測資包含多筆（一筆為一個輸入&輸出的配對），每組的所有測資全對，才會拿到該組測資的分數。<a href="https://www.threads.com/@_shmily.skye/post/DPAiGxLEk3g">程式AC不代表你程式碼寫的友善，而是測資友善</a>。</li>
 	<li>前兩題之部分內容除中文原文外，另提供英文翻譯，並且不建議各位再翻成第三種語言。</li>
 	<li>期中作業的 demo 問題，依往例會比課後練習的難上許多，請做好心理上與知識上的準備。</li>
 	<li>LeetCode 題之給分仍依課程測資為準。雖然課程測資未必會比 LeetCode 的測資嚴格，但仍建議各位不要打賭，亦即請先獲得 LeetCode Accepted 之後再交作業。</li>
