update schedule and add pr 07

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -121,37 +121,37 @@
 	<tr>
 		<td class="tdLeft">W07: 10/16</td>
 		<td class="tdMid">
-			期中作業一展示週
+			<a href="https://geniusturtle6174.github.io/tutor_python">字串；檔案</a>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr07.htm">課後練習 07</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W08: 10/23</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a>
+			期中作業一展示週
 		</td>
 		<td class="tdRight">
-			課後練習 07<br>
+			&nbsp;
 		</td>
 	</tr>
 	
 	<tr>
 		<td class="tdLeft">W09: 10/30</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">字串；Numpy</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">模組；Numpy</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 08</a><br>
+			課後練習 08<br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W10: 11/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">檔案；模組</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
 			課後練習 09<br>
