change demo way

--- a/25f_math/pr07.htm
+++ b/25f_math/pr07.htm
@@ -26,13 +26,14 @@
 			<li>若有餘力，可以把你原本找到的文章，更換成下列段落也測試一次：「If Youth, throughout all history, had had a champion to stand up for it; to show a doubting world that a child can think; and, possibly, do it practically; you wouldn't constantly run across folks today who claim that "a child don't know anything." A child's brain starts functioning at birth; and has, amongst its many infant convolutions, thousands of dormant atoms, into which God has put a mystic possibility for noticing an adult's act, and figuring out its purport.」</li>
 		</ul>
 	</li>
-	<li>(60%)在前一題中，將段落內容從純文字檔讀取。</li>
+	<li>(60%)在前一題中，將段落內容從純文字檔讀取。此外，為了 demo 的方便，該純文字檔必須跟程式碼處在相同的目錄下，並命名為 content.txt，且程式碼中應使用「open('content.txt', 'r')」的方式讀取</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>本練習須於當週 demo，排隊請使用<a href="https://forms.gle/EnmW9wwpKjaYDetEA">此連結</a>。</li>
+	<li>本練習請於時限內至 eeclass 專區「課後練習 07 繳交區」，將程式碼以「在文字輸入框填入文字」的方式繳交。</li>
+	<li>本練習須於當週 demo，教師或助教將依 eeclass 繳交順序叫號。</li>
 </ul>
 
 </body></html>
