--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -144,14 +144,14 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">模組；Numpy</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 08<br>
+			<a href="pr08.htm">課後練習 08</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W10: 11/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
 		</td>
 		<td class="tdRight">
 			課後練習 09<br>
@@ -162,20 +162,21 @@
 	<tr>
 		<td class="tdLeft">W11: 11/13</td>
 		<td class="tdMid">
-			期中作業二展示週
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			課後練習 10<br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W12: 11/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
+			
+			期中作業二展示週
 		</td>
 		<td class="tdRight">
-			課後練習 10<br>
+			&nbsp;
 		</td>
 	</tr>
 
