Add hwmt2 and pr09

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -154,8 +154,8 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 09<br>
-			期中作業二
+			<a href="pr09.htm">課後練習 09</a><br>
+			<a href="hwmt2.htm">期中作業二</a>
 		</td>
 	</tr>
 
