minor update for pr09

--- a/25f_math/pr09.htm
+++ b/25f_math/pr09.htm
@@ -33,7 +33,7 @@
 			<li>自正方形內自己隨意指定一點並繪出。</li>
 			<li>自正方形四個頂點中，隨機選取一個。但請注意：第 i 次選取的點，不能是第 i - 1 次選取的點的逆時針方向的下一個。
 				<ul>
-					<li>(5% bonus)你的程式要能快速的改為「第 i 次選取的點，不能是第 i - 1 次選取的點的順時針方向的下一個」、「第 i 次選取的點，不能是第 i - 1 次選取的點的對面那一個」，或者「第 i 次選取的點，不能是第 i - 1 次選取的點」</li>
+					<li>(5% bonus)你的程式要能快速的改為「第 i 次選取的點，不能是第 i - 1 次選取的點的順時針方向的下一個」、「第 i 次選取的點，不能是第 i - 1 次選取的點的對角那一個」，或者「第 i 次選取的點，不能是第 i - 1 次選取的點」。「快速」的標準，以教師或助教主觀認定為準。</li>
 				</ul>
 			</li>
 			<li>將前兩步的兩個點取中點。</li>
