--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -165,7 +165,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 10<br>
+			<a href="pr10.htm">課後練習 10</a><br>
 		</td>
 	</tr>
 
@@ -194,7 +194,7 @@
 		<td class="tdLeft">W14: 12/04</td>
 		<td class="tdMid">
 			（暫定）網頁伺服器<br>
-			<!--a href="examRules.htm">期末測驗規則</a-->
+			期末考試規則
 		</td>
 		<td class="tdRight">
 			課後練習 12<br>
