--- a/25f_math/hwmt2-2.htm
+++ b/25f_math/hwmt2-2.htm
@@ -69,6 +69,7 @@
 <ul>
 	<li>本題應使用 numpy。</li>
 	<li>測資有兩組，其中一組保證下一步不會「穿牆」。</li>
+	<li><b>本題於回傳結果時，不需要包含文字說明，只需要跟輸入一樣，用逗點隔開四個變數即可</b>。</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方，否則若影響自動批改時，可能會有折扣：
 <pre class="brush: py">
 import numpy as np
