--- a/25f_math/hwmt2-1.htm
+++ b/25f_math/hwmt2-1.htm
@@ -44,6 +44,7 @@
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
+	<li>本題評分用測資僅一組。</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方，否則若影響自動批改時，可能會有折扣：
 <pre class="brush: py">
 def rev_n_add(n):
