--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -183,17 +183,17 @@
 	<tr>
 		<td class="tdLeft">W13: 11/27</td>
 		<td class="tdMid">
-			（暫定）爬蟲<br>
+			爬蟲<br>
 		</td>
 		<td class="tdRight">
-			課後練習 11<br>
+			<a href="pr11.htm">課後練習 11</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W14: 12/04</td>
 		<td class="tdMid">
-			（暫定）網頁伺服器<br>
+			網頁伺服器<br>
 			期末考試規則
 		</td>
 		<td class="tdRight">
