add link and update rules

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -172,7 +172,6 @@
 	<tr>
 		<td class="tdLeft">W12: 11/20</td>
 		<td class="tdMid">
-			
 			期中作業二展示週
 		</td>
 		<td class="tdRight">
@@ -183,7 +182,7 @@
 	<tr>
 		<td class="tdLeft">W13: 11/27</td>
 		<td class="tdMid">
-			爬蟲<br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">爬蟲</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr11.htm">課後練習 11</a><br>
@@ -193,7 +192,7 @@
 	<tr>
 		<td class="tdLeft">W14: 12/04</td>
 		<td class="tdMid">
-			網頁伺服器<br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">網頁伺服器</a><br>
 			期末考試規則
 		</td>
 		<td class="tdRight">
