--- a/25f_math/pr11.htm
+++ b/25f_math/pr11.htm
@@ -50,7 +50,7 @@
 }
 </pre>
 			</li>
-			<li>可盡量使用以下範例來修改：
+			<li>你可以盡量使用以下範例來修改，並只修改「pass」的部份：
 <pre class="brush: py">
 import requests
 from bs4 import BeautifulSoup
@@ -75,6 +75,7 @@ print(d)
 
 <ul>
 	<li>本練習至少有一題須於當週 demo，請於時限內至 eeclass 專區「課後練習 11 繳交區」，將程式碼以「在文字輸入框填入文字」的方式繳交，教師或助教將依 eeclass 繳交順序叫號。</li>
+	<li>隔週繳交之相關訊息，於有需要時另外公告。兩題皆隔週 demo 者打九折。</li>
 	<li>本週題目允許使用 beautifulsoup4、numpy、matplotlib、requests，和內建之 math、random 模組。</li>
 </ul>
 
