add pr12 and exam rules

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -192,11 +192,11 @@
 	<tr>
 		<td class="tdLeft">W14: 12/04</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">網頁伺服器</a><br>
-			期末考試規則
+			網頁設計：<a href="https://geniusturtle6174.github.io/tutor_web">HTML、CSS</a><br>
+			<a href="examRules.htm">期末考試規則</a>
 		</td>
 		<td class="tdRight">
-			課後練習 12<br>
+			<a href="pr12.htm">課後練習 12</a><br>
 		</td>
 	</tr>
 
