--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -206,7 +206,7 @@
 			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本處理</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 13<br>
+			<a href="pr13.htm">課後練習 13</a><br>
 		</td>
 	</tr>
 
