--- a/26s_math/index.htm
+++ b/26s_math/index.htm
@@ -1,1 +1,240 @@
+<html>
+<head>
+	<title>MATH172000--程式設計二</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel=stylesheet type="text/css" href="myCss.css">
+	<base target="_blank">
+	<script type="text/javascript" src="myJs.js"></script>
+</head>
 
+<body bgcolor="#ccccff">
+
+<center>
+
+<span class="myTitle">
+	MATH172000 程式設計二<br>
+	R7R8R9 綜三 315<br>
+</span>
+<br>
+<table cellspacing="0" border=0>
+	<tr>
+		<td width=49% align=center>
+			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
+		</td>
+		<td width=49% align=center>
+			<span class="myTitle">助教：林元鴻<br><script>emailDisplay("a0909306586", "gmail", "com");</script></span>
+		</td>
+	</tr>
+</table>
+
+<br>
+<hr/>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
+	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
+	<tr>
+		<td class="tdLeft" style="width:15%">02/07</td>
+		<td class="tdRight">
+			<ul>
+				<li>eeclass 連結：<a href="https://eeclass.nthu.edu.tw/course/32560">https://eeclass.nthu.edu.tw/course/32560</a></li>
+				<li>進度細節會視情況調整，練習及作業未發布錄影前皆為暫定，發布後則代表確認。</li>
+				<li>加簽說明（公告至簽核結束）
+					<ul>
+						<li>下列之「原修生」，指曾於教師開設之任意「程式設計一」取得 60 以上之分數者；「申請」指申請加簽</li>
+						<li>於 02/26 08:00 前申請之原修生一律核准</li>
+						<li>餘下者，教師將且僅將依序參考下列因素，決定是否核准
+							<ul>
+								<li>是否以正體中文填寫申請事由，並主動寄信提供修過（或抵免）任一程式設計課程之相關證明（符合者優先，原修生直接視為符合）</li>
+								<li>課後練習 01 之表現（佳者優先）</li>
+								<li>期初作業之表現（佳者優先）</li>
+								<li>是否主修、輔系，或雙主修清大應數組（符合者優先）</li>
+								<li>申請早晚（早者優先）</li>
+							</ul>
+						</li>
+						<li>若有問題請盡可能寄信詢問，否則教師可能會視為你不符合前一條的第一項因素</li>
+						<li>教師可能會等到第二週課後才決定是否核准。無法承擔未被核准之風險者，應自行尋找備案或避免申請</li>
+					</ul>
+				</li>
+			</ul>
+		</td>
+	</tr>
+</table>
+
+<br><br>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=3 style="border-bottom-width:2;border-bottom-color:black">課程進度表</th></tr>
+	<tr>
+		<th class="thLeft" align=center>課程日期</th>
+		<th class="thRight" align=center colspan=2>概要</th>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W01: 02/26</td>
+		<td class="tdMid">
+			<a href="courseIntro.htm">課程簡介</a>
+		</td>
+		<td class="tdRight">
+			<a href="prAndHwRules.htm">課後練習及作業總則</a><br>
+			<a href="pr01.htm">課後練習 01</a><br>
+			<a href="hwit.htm">期初作業</a>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W02: 03/05</td>
+		<td class="tdMid">
+			期初作業展示週
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W03: 03/12</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a>
+		</td>
+		<td class="tdRight">
+			<a href="pr02.htm">課後練習 02</a>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W04: 03/19</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">質數篩選</a>
+		</td>
+		<td class="tdRight">
+			<a href="pr03.htm">課後練習 03</a>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W05: 03/26</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">矩陣運算</a><br>
+		</td>
+		<td class="tdRight">
+			<a href="pr04.htm">課後練習 04</a><br>
+			<a href="hwmt.htm">期中作業</a>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W06: 04/02</td>
+		<td class="tdMid">
+			校際活動週停課
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W07: 04/09</td>
+		<td class="tdMid">
+			期中作業展示週
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W08: 04/16</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：梯度下降</a>
+		</td>
+		<td class="tdRight">
+			<a href="pr05.htm">課後練習 05</a>
+		</td>
+	</tr>
+	
+	<tr>
+		<td class="tdLeft">W09: 04/23</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：基本概念、效果評估、最近鄰居法</a>
+		</td>
+		<td class="tdRight">
+			課後練習 06
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W10: 04/30</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：貝氏分類、線性回歸</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 07
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W11: 05/07</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：類神經網路（簡介與多層感知器）</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 08<br>
+			期末專案
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W12: 05/14</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：基於樹的模型</a>
+		</td>
+		<td class="tdRight">
+			課後練習 09
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W13: 05/21</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：輸入正規化</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 10
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W14: 05/28</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：交叉驗證、支撐向量機</a>
+		</td>
+		<td class="tdRight">
+			課後練習 11
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W15: 06/04</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：特徵降維</a>
+		</td>
+		<td class="tdRight">
+			課後練習 12
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W16: 06/11</td>
+		<td class="tdMid">
+			期末專案展示週<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+</table>
+<br>
+</center>
+</body></html>
