--- a/26s_math/pr01.htm
+++ b/26s_math/pr01.htm
@@ -13,7 +13,7 @@
 <ul>
 	<li>(45%)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/largest-triangle-area">812. Largest Triangle Area</a>。</li>
 	<li>(45%)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/largest-perimeter-triangle">976. Largest Perimeter Triangle</a>。</li>
-	<li>(10%)填寫<a href="#">修課問卷</a>。本題不 demo，請於 03/01 (Sun.) 08:00 前填寫完畢，這之後隨時可能關閉問卷。</li>
+	<li>(10%)填寫<a href="https://forms.gle/WeJqZ7ta18i9qVCf7">修課問卷</a>。本題不 demo，請於 03/01 (Sun.) 08:00 前填寫完畢，這之後隨時可能關閉問卷。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
